reference/tests/snapshots/snapshot__run_reference_examples@select-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/select-0.prql
---
SELECT
  first_name
FROM
  employees
