reference/tests/snapshots/snapshot__run_reference_examples@select-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/select-2.prql
---
SELECT
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees
