reference/tests/snapshots/snapshot__run_reference_examples@sort-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/sort-0.prql
---
SELECT
  employees.*
FROM
  employees
ORDER BY
  age
